--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,9 @@
+body {
+  font-family: "Montserrat", sans-serif;
+}
 h1,
 h2 {
   text-align: center;
-  font-family: "Montserrat", sans-serif;
 }
 h1 {
   font-size: 50px;
@@ -9,6 +11,10 @@ h1 {
 }
 h2 {
   padding: 40px;
+}
+h4 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 100px;
 }
 
 .container {
@@ -26,19 +32,21 @@ h2 {
   min-height: 1000px;
   border-radius: 30px;
   margin: 0 auto;
-  padding: 60px;
+  padding-top: 40px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .searchbar {
   min-width: 60%;
-  min-height: 35px;
+  min-height: 25px;
   border-radius: 2rem;
   border: none;
   padding: 0.5rem;
-
+  color: blue;
   background: linear-gradient(
     to left bottom,
-    rgba(255, 255, 255, 0.6),
+    #855b9c,
     rgba(255, 255, 255, 0.2)
   );
 
@@ -48,32 +56,39 @@ h2 {
 
 .searchbar:hover {
   transform: translateY(-4px);
-  box-shadow: 0 8px 15px rgba(31, 31, 31, 0.1);
+  box-shadow: 0 10px 16px #071549;
 }
 .search-btn,
 .currentBtn {
-  margin-left: 10px;
-  width: 80px;
+  margin-left: 8px;
+  width: 90px;
   min-height: 35px;
   font-size: 1rem;
   font-weight: bold;
   letter-spacing: 1.2px;
-  color: black;
+  color: rgb(143, 142, 143);
   background: linear-gradient(
     to left bottom,
-    rgba(255, 255, 255, 0.6),
+    #855b9c,
     rgba(255, 255, 255, 0.2)
   );
 
   border: none;
   border-radius: 2rem;
-  box-shadow: 0 8px 15px rbga(0, 0, 0, 0.1);
+  box-shadow: 0 10px 16px rbga(0, 0, 0, 0.1);
   transition: all 0.3s ease 0s;
   cursor: pointer;
 }
 
 .search-btn:hover,
 .currentBtn:hover {
-  box-shadow: 0 8px 15px rgba(31, 31, 31, 0.1);
+  box-shadow: 0 8px 15px #071549;
   transform: translateY(-4px);
+}
+
+.temperature {
+  font-size: 200px;
+}
+.row {
+  text-align: center;
 }
