--- a/src/style.css
+++ b/src/style.css
@@ -12,11 +12,13 @@ h1 {
 h2 {
   padding: 40px;
 }
-h4 {
-  font-family: "Montserrat", sans-serif;
-  font-size: 100px;
-}
 
+p {
+  text-align: right;
+  position: relative;
+  font-size: 20px;
+  top: -40px;
+}
 .container {
   background-image: linear-gradient(
     #13225a,
@@ -33,7 +35,7 @@ h4 {
   border-radius: 30px;
   margin: 0 auto;
   padding-top: 40px;
-  padding-left: 15px;
+  padding-left: 25px;
   padding-right: 15px;
 }
 
@@ -87,8 +89,14 @@ h4 {
 }
 
 .temperature {
-  font-size: 200px;
+  font-size: 100px;
+  margin-left: 20px;
+}
+
+.units {
+  font-size: 20px;
 }
 .row {
   text-align: center;
+  font-size: 30px;
 }
