--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,7 @@
 body {
   font-family: "Montserrat", sans-serif;
 }
+
 h1,
 h2 {
   text-align: center;
@@ -10,15 +11,26 @@ h1 {
   margin-bottom: 20px;
 }
 h2 {
-  padding: 40px;
+  padding: 30px;
 }
-
-p {
+h3:first-letter {
+  text-transform: capitalize;
+}
+a {
+  text-decoration: none;
+  font-size: 30px;
+}
+a:hover {
+  cursor: pointer;
+}
+li {
   text-align: right;
   position: relative;
   font-size: 20px;
-  top: -40px;
+  top: -80px;
+  list-style-type: none;
 }
+
 .container {
   background-image: linear-gradient(
     #13225a,
@@ -29,7 +41,7 @@ p {
     #905f9f,
     #9662a2
   );
-  color: #ffecda;
+  color: #facbf0;
   max-width: 600px;
   min-height: 1000px;
   border-radius: 30px;
@@ -39,13 +51,16 @@ p {
   padding-right: 15px;
 }
 
+::placeholder {
+  color: #facbf0;
+}
+
 .city-input {
   min-width: 60%;
   min-height: 25px;
   border-radius: 2rem;
   border: none;
   padding: 0.5rem;
-  color: blue;
   background: linear-gradient(
     to left bottom,
     #855b9c,
@@ -89,15 +104,14 @@ p {
 }
 
 .temperature {
-  font-size: 100px;
+  font-size: 150px;
   margin-left: 20px;
+  position: relative;
+  top: 80px;
 }
 
-.units {
-  font-size: 20px;
-}
-.active {
-  color: coral;
+.highlighted {
+  color: rgb(204, 1, 170);
 }
 .row {
   text-align: center;
